# mydrecshop-render-deploy

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  start_bot.bat  stop_previous_bot.ps1
.github/workflows/: publish-image.yml
assets/emoji_packs/: README.md  registry.json  theme.json
deploy/bootstrap/: shop.db.fernet
scripts/: check_release_secrets.py  prepare_deploy_snapshot.py  verify_deploy_snapshot.py
src/mydrecshop/: __init__.py  __main__.py  app.py  bootstrap.py  callbacks.py  config.py  db.py  formatting.py  i18n.py  keyboards.py  legal.py  media.py  models.py  seed.py  subscription.py  theme.py  translation.py  views.py
src/mydrecshop/handlers/: admin.py  user.py
tests/: test_admin_custom_emoji.py  test_bootstrap.py  test_copy_permissions.py  test_db.py  test_db_regression_guards.py  test_emoji_theme.py  test_maintenance_mode.py  test_reservation_concurrency.py  test_runtime_sales_and_pricing.py  test_translation.py  test_ui.py  test_user_balance.py  test_wallet_flows.py
