[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mydrecshop-bot"
version = "1.0.0"
description = "Bilingual Binance Pay storefront for MydrecShop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.30.0",
  "aiohttp>=3.9,<4",
  "aiosqlite>=0.21,<1",
  "cryptography>=49,<50",
  "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
mydrecshop = "mydrecshop.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mydrecshop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
